--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL="postgresql://focus_in_beauty_user:ecSgemRZRQzbGkdddCQ1GDWWryRHfX5K@dpg-ctgbap3gbbvc738o9mng-a/focus_in_beauty"
+DATABASE_URL="postgresql://servdor_pretynails_user:nmpH7C9TOfYQ9UorS70fIDwcEADGmOVV@dpg-cu4he43v2p9s7386kej0-a/servdor_pretynails"
