--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL="postgresql://database_prettynails_user:HWPt5uqLXJU2RDqH8KnxiPlF2O4RGoAS@dpg-cu4lhr3tq21c73fhqoig-a.oregon-postgres.render.com/database_prettynails"
+DATABASE_URL="postgresql://database_prettynails_user:HWPt5uqLXJU2RDqH8KnxiPlF2O4RGoAS@dpg-cu4lhr3tq21c73fhqoig-a/database_prettynails"
