--- a/package.json
+++ b/package.json
@@ -2,17 +2,20 @@
   "name": "back-end",
   "version": "1.0.0",
   "scripts": {
-  "build": "./node_modules/.bin/prisma generate",
-  "start": "node app.js"
+    "build": "npx prisma generate",
+    "start": "node app.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "type": "module",
   "author": "Focus in beauty",
-  "license": "MIT",
+  "license": "ISC",
   "description": "",
   "dependencies": {
     "@prisma/client": "^6.0.1",
     "cors": "^2.8.5",
-    "express": "^4.21.2",
+    "express": "^4.21.2"
+  },
+  "devDependencies": {
     "prisma": "^6.2.1"
   }
 }
