--- a/package.json
+++ b/package.json
@@ -3,12 +3,11 @@
   "version": "1.0.0",
   "scripts": {
     "build": "npx prisma generate",
-    "start": "node app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js"
   },
   "type": "module",
   "author": "Focus in beauty",
-  "license": "ISC",
+  "license": "MIT",
   "description": "",
   "dependencies": {
     "@prisma/client": "^6.0.1",
