--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "build": "npx prisma generate",
+    "prisma:migrate": "prisma migrate deploy",
     "start": "node app.js"
   },
   "type": "module",
