--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "back-end",
   "version": "1.0.0",
   "scripts": {
-  "build": "npx prisma generate",
-  "migrate": "npx prisma migrate deploy",
-  "start": "node app.js"
+    "build": "npx prisma generate",
+    "start": "node app.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "type": "module",
   "author": "",
@@ -16,6 +16,6 @@
     "express": "^4.21.2"
   },
   "devDependencies": {
-    "prisma": "^6.2.1"
+    "prisma": "^6.0.1"
   }
 }
