--- a/package.json
+++ b/package.json
@@ -8,14 +8,17 @@
   },
   "type": "module",
   "author": "",
-  "license": "MIT",
+  "license": "ISC",
   "description": "",
   "dependencies": {
     "@prisma/client": "^6.0.1",
     "cors": "^2.8.5",
-    "express": "^4.21.1"
+    "express": "^4.21.2"
   },
   "devDependencies": {
     "prisma": "^6.0.1"
+  },
+  "engines": {
+    "node": ">=16 <21"
   }
 }
