--- a/package.json
+++ b/package.json
@@ -7,15 +7,17 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "type": "module",
-  "author": "",
-  "license": "ISC",
+  "author": "Focus In Beauty",
+  "license": "MIT",
   "description": "",
   "dependencies": {
     "@prisma/client": "^6.0.1",
     "cors": "^2.8.5",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.8",
     "prisma": "^6.0.1"
   },
   "engines": {
