--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 DATABASE_URL="postgresql://database_prettynails_tl0i_user:7SNYFFSgyVsuEVj67gLe2lCqvoGVb8mB@dpg-cu6mvcggph6c73c8c4d0-a:5432/database_prettynails_tl0i?schema=public"
+JWT_SECRET="chavesecreta"
