--- a/package.json
+++ b/package.json
@@ -12,16 +12,16 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^6.3.0",
+    "@supabase/supabase-js": "^2.49.1",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
-    "cloudinary": "^1.21.0",
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
-    "multer": "^1.4.5-lts.1",
-    "multer-storage-cloudinary": "^4.0.0"
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "prisma": "^6.3.0"
   }
 }
+  
